--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
     <h1>             Come to Las Vegas</h1>
     <body>
         <script="script.js"></script>
-    </body>
+      <a href="https://www.lasvegasnevada.gov/"><img src="caption.jpg" >
+      </a>
+        <h1>Here in Las Vegas you can visit many cool places</h1>
+       <a href="https://www.yelp.com/search?find_desc=Scenic+Views&find_loc=Las+Vegas%2C+NV"><img src="vegas.jpg"></a>
+        <h1>You can visit the vegas sphere, hoover dam, and many other cool places</h1>
+    <a href="https://www.vegas.com/shows/variety/the-sphere-experience-las-vegas/?_&utm_source=google&utm_medium=cpc&utm_campaign=21021979177&utm_term=las%20vegas%20sphere&adgroup=160252374457&target=kwd-354039016944&loc_i=9030833&loc_p=9003712&gad_source=1&gclid=EAIaIQobChMI1bSCgr3ciwMVBDUIBR1aEAnMEAAYAiAAEgIwX_D_BwE"><img src="sphere.jpg">
+    </a>
+   <a href="https://hoover-dam-tours.com/"> <img src="dam.webp" alt="https://res.taketours.com/images/Hoover-Dam-NV.webp">
+   </a>
+    <h1>Book a private tour for a low price of 5,658$ without taxes</h1>
+    <a href="https://anothersideoflasvegastours.com/"><img src="money.jpg" alt="https://t3.ftcdn.net/jpg/00/05/33/06/360_F_5330693_OtYeItVO6qChDokFPZv7HE9JcIZwLzka.jpg">
+     </a>
+</body>
 </html>
